# t9

./: .gitignore  EN-BR.WORDS.txt  Makefile  README  README.md  demo.py  makepy9.py  py9.py  pyproject.toml  readme.txt
corpus/: .gitignore  README.md
corpus/scripts/: 1-download-corpus.sh  2-extract-comments.sh  3-clean-markdown.sh  4-sentence-split.sh  5-tokenize-sort.sh  6-clean-words.sh  7-create-frequency-wordlist.py
docs/: t9.cast
docs/wordlist/: index.md
src/py9/: __init__.py  cli.py  constants.py  demo.py  dict.py  input.py  key.py  makepy9.py  mode.py  py9.py  utils.py
src/py9/wordlists/: en-gb.words
src/t9/: cli.py  dict.py
src/t9/corpus/: __init__.py  cli.py  extractor.py  processor.py  scraper.py
src/t9/wordlists/: nl.words
tests/: conftest.py
tests/data/: branch_example.txt  branches.txt  dead_branch.txt  dead_end_example.txt  hello.txt
tests/unit/: test_dict.py  test_makepy9.py  test_maket9.py
